# sky-resedit

./: .gitignore  CMakeLists.txt  README.md  config.json
example_resource_pack/FurryClassics/: furryclassics.json  metadata.json
include/minizip/: CMakeLists.txt  minizip.c
include/misc/: Logger.h
include/modui/: app.cxx  app.hpp  icons.cxx  icons.hpp  modui.hpp  theme.cxx  theme.hpp
include/modui/animation/: animation.cxx  animation.hpp
include/modui/animation/screen/: fadescreenanimation.cxx  fadescreenanimation.hpp  screenanimation.cxx  screenanimation.hpp
include/modui/animation/theme/: themetransitionanimation.cxx  themetransitionanimation.hpp
include/modui/core/: basewidget.hpp  common.cxx  common.hpp  exceptions.cxx  exceptions.hpp
include/modui/core/image/: image.cxx  image.hpp  rasterimage.cxx  rasterimage.hpp  selectableimage.cxx  selectableimage.hpp  vectoricon.cxx  vectoricon.hpp  vectorimage.cxx  vectorimage.hpp
include/modui/core/style/: color.hpp  theme.cxx  theme.hpp  thememanager.cxx  thememanager.hpp
include/modui/internal/: internal_core.cxx  internal_core.hpp  internal_utils.cxx  internal_utils.hpp
include/modui/ui/: appbar.cxx  appbar.hpp  basebutton.cxx  basebutton.hpp  baseslider.cxx  baseslider.hpp  button.cxx  button.hpp  card.cxx  card.hpp  checkbox.cxx  checkbox.hpp  divider.cxx  divider.hpp  iconbutton.cxx  iconbutton.hpp  linearlayout.cxx  linearlayout.hpp  listitem.cxx  listitem.hpp  memorytext.cxx  memorytext.hpp  menu.cxx  menu.hpp  screen.cxx  screen.hpp  screenmanager.cxx  screenmanager.hpp  scrolllayout.cxx  scrolllayout.hpp  slider.cxx  slider.hpp  switch.cxx  switch.hpp  text.cxx  text.hpp  widget.cxx  widget.hpp  widgets.hpp
include/stb/: stb_image.cpp  stb_image.h
resedit/: asset_manager_hook.cpp  asset_manager_hook.hpp  config.cpp  config.hpp  main.cpp  resedit.cpp  resedit.hpp  resedit_app.cpp  resedit_app.hpp  resedit_io.cpp  resedit_io.hpp  utils.cpp  utils.hpp
resedit/core/: append_edit.cpp  append_edit.hpp  common.hpp  edit.hpp  exceptions.hpp  json_edit.cpp  json_edit.hpp  replace_edit.cpp  replace_edit.hpp  resource_pack.cpp  resource_pack.hpp  resource_pack_manager.cpp  resource_pack_manager.hpp
resedit/ui/: main_screen.cpp  main_screen.hpp
resedit/ui/widgets/: resource_pack_card.cpp  resource_pack_card.hpp
